<?xml version="1.0"?>
<package format="3">
  <name>Prodev_bringup</name>
  <version>0.0.1</version>
  <description>Top-level bringup package for Prodev SLAM Jazzy system</description>
  <maintainer email="maintainer@example.com">Prodev Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>Prodev_simulation</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
