<?xml version="1.0"?>
<package format="3">
  <name>Prodev_simulation</name>
  <version>0.0.1</version>
  <description>ROS2 Jazzy SLAM simulation package using Gazebo Sim (gz sim)</description>
  <maintainer email="maintainer@example.com">Prodev Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
